# src/model/index.ts
@@ -47,12 +47,15 @@ export * from './findWorkspaceResponseMemberDtoRole';
 export * from './findWorkspaceResponsePartDto';
 export * from './getMicroserviceResponseDto';
 export * from './getMicroserviceResponseDtoType';
+export * from './getProfileResponseDto';
+export * from './getProfileResponseDtoRole';
 export * from './loginResponseDto';
 export * from './metaResponseDto';
 export * from './projectControllerCreate200';
 export * from './projectControllerCreate200AllOf';
 export * from './projectControllerFindAllBuWorkspace200';
 export * from './projectControllerFindAllBuWorkspace200AllOf';
+export * from './registerResponseDto';
 export * from './updateSnippetDto';
 export * from './workspaceControllerCreate200';
 export * from './workspaceControllerCreate200AllOf';
